--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,10 @@
   ],
   "authors": [
     "Creative Circle <dev@creativecirclemedia.com>"
+    "Andy JArrett <mail@andyjarrett.co.uk>"
   ],
   "license": "BSD-2-Clause",
-  "homepage": "https://github.com/creativecirclemedia/dropdown-checkboxes",
+  "homepage": "https://github.com/andyj/dropdown-checkboxes",
   "ignore": [
     "**/.*",
     "node_modules",
