--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   ],
   "authors": [
     "Creative Circle <dev@creativecirclemedia.com>"
-    "Andy JArrett <mail@andyjarrett.co.uk>"
+    "Andy Jarrett <mail@andyjarrett.co.uk>"
   ],
   "license": "BSD-2-Clause",
   "homepage": "https://github.com/creativecirclemedia/dropdown-checkboxes",
